# thoughtvault

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature.md  research.md  technical-task.md
docs/: 01-product-vision.md  02-roadmap.md  03-architecture.md  04-data-model.md  05-processing-pipeline.md  06-output-design.md  07-decisions-and-open-questions.md  08-product-modes.md
examples/: memo-example.md
src/thoughtvault/: __init__.py  cli.py  db.py  exporter.py  indexer.py  recall.py  reference.py  scanner.py  search.py  sources.py
tests/: test_phase1.py
