[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "thoughtvault"
version = "0.1.0"
description = "Local-first personal memory and knowledge system"
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
thoughtvault = "thoughtvault.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
